--- a/package.json
+++ b/package.json
@@ -27,29 +27,28 @@
   },
   "homepage": "https://github.com/epiqo/recruiter_epiq_deps#readme",
   "dependencies": {
-    "chalk": "^1.1.3",
-    "critical": "^0.8.4",
-    "es6-promise": "^4.1.0",
-    "gulp": "^3.9.1",
+    "chalk": "^2.4.1",
+    "critical": "^1.3.2",
+    "es6-promise": "^4.2.4",
+    "gulp": "^4.0.0",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-changed": "^2.0.0",
     "gulp-concat": "~2.6.1",
     "gulp-cssmin": "^0.1.7",
-    "gulp-imagemin": "^3.1.1",
+    "gulp-imagemin": "^4.1.0",
     "gulp-livereload": "^3.8.1",
     "gulp-rename": "^1.2.2",
     "gulp-replace-path": "^0.4.0",
     "gulp-rimraf": "^0.2.1",
-    "gulp-sass": "^3.1.0",
+    "gulp-sass": "^4.0.1",
     "gulp-shell": "^0.6.3",
     "gulp-stylelint": "^5.0.0",
     "gulp-svg-sprite": "^1.3.7",
     "gulp-svgmin": "^1.2.4",
-    "gulp-uglify": "~2.1.2",
+    "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
     "install": "^0.10.1",
     "kss": "^2.0.2",
-    "npm": "^5.5.1",
     "prompt": "^1.0.0",
     "stylelint": "^8.2.0",
     "stylelint-config-recommended": "^1.0.0",
@@ -61,9 +60,9 @@
   },
   "devDependencies": {
     "ansi-regex": "^3.0.0",
-    "commitizen": "^2.8.6",
+    "commitizen": "^2.9.6",
     "cz-conventional-changelog": "^1.2.0",
-    "semantic-release": "^7.0.2"
+    "semantic-release": "^15.5.0"
   },
   "czConfig": {
     "path": "node_modules/cz-conventional-changelog"
