--- a/package.json
+++ b/package.json
@@ -34,14 +34,14 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-changed": "^2.0.0",
     "gulp-concat": "~2.6.1",
-    "gulp-cssmin": "^0.1.7",
+    "gulp-cssmin": "^0.2.0",
     "gulp-imagemin": "^5.0.3",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^1.0.0",
     "gulp-rimraf": "^0.2.1",
     "gulp-sass": "^4.0.1",
     "gulp-shell": "^0.6.3",
-    "gulp-stylelint": "^5.0.0",
+    "gulp-stylelint": "^8.0.0",
     "gulp-svg-sprite": "^1.3.7",
     "gulp-svgmin": "^1.2.4",
     "gulp-uglify": "^3.0.0",
@@ -49,9 +49,9 @@
     "install": "^0.10.1",
     "kss": "^3.0.0-beta.20",
     "prompt": "^1.0.0",
-    "stylelint": "^8.2.0",
+    "stylelint": "^9.10.1",
     "stylelint-config-recommended": "^1.0.0",
-    "stylelint-config-sass-guidelines": "^3.1.0",
+    "stylelint-config-sass-guidelines": "^5.3.0",
     "stylelint-scss": "^2.1.0",
     "stylelint-selector-bem-pattern": "^2.0.0",
     "tiny-lr": "^1.0.3",
@@ -59,12 +59,14 @@
   },
   "devDependencies": {
     "ansi-regex": "^3.0.0",
-    "commitizen": "^2.9.6",
-    "cz-conventional-changelog": "^1.2.0",
+    "commitizen": "^3.0.7",
+    "cz-conventional-changelog": "^2.1.0",
     "semantic-release": "^15.5.0"
   },
-  "czConfig": {
-    "path": "node_modules/cz-conventional-changelog"
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   },
   "engines": {
     "node": ">=6.10",
